# gliss

./: AUTHORS  COPYING  Makefile.am  README  autogen.sh  configure.ac
extra/: svg-glisser
src/: Makefile.am  gliss-allocator.c  gliss-allocator.h  gliss-basic.h  gliss-cubic-accumulator.c  gliss-cubic-accumulator.h  gliss-elements.h  gliss-extensions.c  gliss-extensions.h  gliss-geometry.c  gliss-geometry.h  gliss-line-accumulator.c  gliss-line-accumulator.h  gliss-list.c  gliss-list.h  gliss-math.c  gliss-math.h  gliss-path.c  gliss-path.h  gliss-quadratic-accumulator.c  gliss-quadratic-accumulator.h  gliss-rasterizer.c  gliss-rasterizer.h  gliss-shaders.c  gliss-shaders.h  gliss-slice.c  gliss-slice.h  gliss-source.c  gliss-source.h  gliss-state.c  gliss-state.h  gliss-types.h  gliss.c  gliss.h
test/: Makefile.am  gliss-test-allocators-free.c  gliss-test-allocators-resolve.c  gliss-test-allocators-uninitialized.c  gliss-test-allocators.c  gliss-test-common.c  gliss-test-common.h  gliss-test-control-triangulation-vis.c  gliss-test-cubic-flower-other-vis.c  gliss-test-cubic-flower-vis.c  gliss-test-cubic-font-vis.c  gliss-test-cubic-mono-logo-vis.c  gliss-test-line-accumulation.c  gliss-test-line-closing-vis.c  gliss-test-line-intersecting-vis.c  gliss-test-list-append-sorted.c  gliss-test-list-prepend.c  gliss-test-list-reverse.c  gliss-test-multiple-paths-vis.c  gliss-test-multiple-sources-vis.c  gliss-test-quadratic-accumulation.c  gliss-test-quadratic-and-lines-vis.c  gliss-test-quadratic-closing-vis.c  gliss-test-quadratic-intersecting-vis.c  gliss-test-simple-cubic-vis.c  gliss-test-simple-line-vis.c  gliss-test-simple-quadratic-vis.c  gliss-test-slices.c  gliss-test-source-color.c  gliss-test-source-linear-gradient-more-vis.c  gliss-test-source-linear-gradient-vis.c  gliss-test-source-radial-gradient-more-vis.c  gliss-test-source-radial-gradient-vis.c  gliss-test-sub-path-vis.c  test-suite.sh
