MAINTAINERCLEANFILES = Makefile.in

if BUILD_WITH_TEST

noinst_PROGRAMS = \
gliss-test-line-accumulation \
gliss-test-quadratic-accumulation \
gliss-test-simple-line-vis \
gliss-test-line-closing-vis \
gliss-test-slices \
gliss-test-list-prepend \
gliss-test-list-reverse \
gliss-test-simple-quadratic-vis \
gliss-test-simple-cubic-vis \
gliss-test-quadratic-and-lines-vis \
gliss-test-quadratic-intersecting-vis \
gliss-test-quadratic-closing-vis \
gliss-test-line-intersecting-vis \
gliss-test-control-triangulation-vis \
gliss-test-list-append-sorted \
gliss-test-source-color \
gliss-test-cubic-flower-vis \
gliss-test-cubic-flower-other-vis \
gliss-test-cubic-font-vis \
gliss-test-cubic-mono-logo-vis \
gliss-test-allocators \
gliss-test-allocators-resolve \
gliss-test-allocators-free \
gliss-test-multiple-sources-vis \
gliss-test-allocators-uninitialized \
gliss-test-multiple-paths-vis \
gliss-test-source-linear-gradient-vis \
gliss-test-source-radial-gradient-vis \
gliss-test-source-linear-gradient-more-vis \
gliss-test-sub-path-vis \
gliss-test-source-radial-gradient-more-vis

gliss_test_line_accumulation_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_line_accumulation_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_line_accumulation_SOURCES = gliss-test-line-accumulation.c gliss-test-common.c

gliss_test_sub_path_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_sub_path_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_sub_path_vis_SOURCES = gliss-test-sub-path-vis.c gliss-test-common.c

gliss_test_source_color_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_source_color_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_source_color_SOURCES = gliss-test-source-color.c gliss-test-common.c

gliss_test_source_linear_gradient_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_source_linear_gradient_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_source_linear_gradient_vis_SOURCES = gliss-test-source-linear-gradient-vis.c gliss-test-common.c

gliss_test_source_radial_gradient_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_source_radial_gradient_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_source_radial_gradient_vis_SOURCES = gliss-test-source-radial-gradient-vis.c gliss-test-common.c

gliss_test_source_linear_gradient_more_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_source_linear_gradient_more_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_source_linear_gradient_more_vis_SOURCES = gliss-test-source-linear-gradient-more-vis.c gliss-test-common.c

gliss_test_source_radial_gradient_more_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_source_radial_gradient_more_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_source_radial_gradient_more_vis_SOURCES = gliss-test-source-radial-gradient-more-vis.c gliss-test-common.c

gliss_test_quadratic_accumulation_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_quadratic_accumulation_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_quadratic_accumulation_SOURCES = gliss-test-quadratic-accumulation.c gliss-test-common.c

gliss_test_simple_line_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_simple_line_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_simple_line_vis_SOURCES = gliss-test-simple-line-vis.c gliss-test-common.c

gliss_test_line_closing_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_line_closing_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_line_closing_vis_SOURCES = gliss-test-line-closing-vis.c gliss-test-common.c

gliss_test_quadratic_closing_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_quadratic_closing_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_quadratic_closing_vis_SOURCES = gliss-test-quadratic-closing-vis.c gliss-test-common.c

gliss_test_multiple_sources_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_multiple_sources_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_multiple_sources_vis_SOURCES = gliss-test-multiple-sources-vis.c gliss-test-common.c

gliss_test_multiple_paths_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_multiple_paths_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_multiple_paths_vis_SOURCES = gliss-test-multiple-paths-vis.c gliss-test-common.c

gliss_test_slices_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_slices_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_slices_SOURCES = gliss-test-slices.c gliss-test-common.c

gliss_test_allocators_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_allocators_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_allocators_SOURCES = gliss-test-allocators.c gliss-test-common.c

gliss_test_allocators_uninitialized_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_allocators_uninitialized_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_allocators_uninitialized_SOURCES = gliss-test-allocators-uninitialized.c gliss-test-common.c

gliss_test_allocators_resolve_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_allocators_resolve_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_allocators_resolve_SOURCES = gliss-test-allocators-resolve.c gliss-test-common.c

gliss_test_allocators_free_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_allocators_free_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_allocators_free_SOURCES = gliss-test-allocators-free.c gliss-test-common.c

gliss_test_list_reverse_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_list_reverse_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_list_reverse_SOURCES = gliss-test-list-reverse.c gliss-test-common.c

gliss_test_list_append_sorted_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_list_append_sorted_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_list_append_sorted_SOURCES = gliss-test-list-append-sorted.c gliss-test-common.c

gliss_test_list_prepend_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_list_prepend_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_list_prepend_SOURCES = gliss-test-list-prepend.c gliss-test-common.c

gliss_test_simple_quadratic_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_simple_quadratic_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_simple_quadratic_vis_SOURCES = gliss-test-simple-quadratic-vis.c gliss-test-common.c

gliss_test_simple_cubic_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_simple_cubic_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_simple_cubic_vis_SOURCES = gliss-test-simple-cubic-vis.c gliss-test-common.c

gliss_test_cubic_flower_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_cubic_flower_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_cubic_flower_vis_SOURCES = gliss-test-cubic-flower-vis.c gliss-test-common.c

gliss_test_cubic_font_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_cubic_font_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_cubic_font_vis_SOURCES = gliss-test-cubic-font-vis.c gliss-test-common.c

gliss_test_cubic_mono_logo_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_cubic_mono_logo_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_cubic_mono_logo_vis_SOURCES = gliss-test-cubic-mono-logo-vis.c gliss-test-common.c

gliss_test_cubic_flower_other_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_cubic_flower_other_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_cubic_flower_other_vis_SOURCES = gliss-test-cubic-flower-other-vis.c gliss-test-common.c

gliss_test_quadratic_and_lines_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_quadratic_and_lines_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_quadratic_and_lines_vis_SOURCES = gliss-test-quadratic-and-lines-vis.c gliss-test-common.c

gliss_test_quadratic_intersecting_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_quadratic_intersecting_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_quadratic_intersecting_vis_SOURCES = gliss-test-quadratic-intersecting-vis.c gliss-test-common.c

gliss_test_line_intersecting_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_line_intersecting_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_line_intersecting_vis_SOURCES = gliss-test-line-intersecting-vis.c gliss-test-common.c

gliss_test_control_triangulation_vis_LDADD = $(GLISS_OBJ_LIBS)
gliss_test_control_triangulation_vis_CFLAGS = $(GLISS_OBJ_CFLAGS)
gliss_test_control_triangulation_vis_SOURCES = gliss-test-control-triangulation-vis.c gliss-test-common.c

endif

